fix: print css and some consistency in alignment

--- a/static/assets/css/global.css
+++ b/static/assets/css/global.css
@@ -791,5 +791,13 @@ pre {
     display: none !important;
     position: absolute;	
   }
-
+	
+	#webmention {
+    display: none !important;
+    position: absolute;
+	}
+	.u-category {
+    display: none !important;
+    position: absolute;
+	}
 }
